--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,58 @@
 </head>
 
 <body>
-  <header>
-
-  </header>
+  <section class="promo">
+    <header class="header">
+      <div class="header__wrapper container">
+        <a class="button" href="#">
+          <span class="visually-hidden">Инстаграм</span>
+          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M18.5341 1H7.46592C3.89455 1 1 3.89507 1 7.46592V18.5341C1 22.1054 3.89507 25 7.46643 25H18.5336C22.1049 25 25 22.1049 25 18.5336V7.46592C25 3.89455 22.1049 1 18.5336 1H18.5341Z"
+              stroke="white" stroke-width="2" stroke-miterlimit="10" />
+            <path
+              d="M13 18.7932C16.1995 18.7932 18.7932 16.1995 18.7932 13C18.7932 9.8005 16.1995 7.20679 13 7.20679C9.80049 7.20679 7.20679 9.8005 7.20679 13C7.20679 16.1995 9.80049 18.7932 13 18.7932Z"
+              stroke="white" stroke-width="2" stroke-miterlimit="10" />
+            <path
+              d="M20.0345 7.20688C20.72 7.20688 21.2757 6.65115 21.2757 5.96562C21.2757 5.2801 20.72 4.72437 20.0345 4.72437C19.3489 4.72437 18.7932 5.2801 18.7932 5.96562C18.7932 6.65115 19.3489 7.20688 20.0345 7.20688Z"
+              fill="white" />
+          </svg>
+        </a>
+        <nav class="main-menu">
+          <ul class="main-menu__list">
+            <li class="main-menu__item"><a class="main-menu__link main-menu__link--current">Главная</a>
+            </li>
+            <li class="main-menu__item"><a class="main-menu__link" href="beauty-masters.html">Мастера</a></li>
+            <li class="main-menu__item"><a class="main-menu__link" href="#">Косметика</a></li>
+          </ul>
+        </nav>
+        <a class="logo header__logo" href="#">
+          <img class="header__logo-img" src="images/logo.svg" alt="Логотип Delote-Beauty">
+        </a>
+        <nav class="main-menu">
+          <ul class="main-menu__list">
+            <li class="main-menu__item"><a class="main-menu__link" href="price.html">Акции</a></li>
+            <li class="main-menu__item"><a class="main-menu__link" href="#">Отзывы</a></li>
+            <li class="main-menu__item"><a class="main-menu__link" href="contacts.html">Контакты</a></li>
+          </ul>
+        </nav>
+        <button class="button info-button" type="button">
+          <span class="visually-hidden">Ещё</span>
+          <svg width="50" height="21" viewBox="0 0 50 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <line x1="10" y1="0.5" x2="50" y2="0.5" stroke="white" />
+            <line x1="10" y1="20.5" x2="50" y2="20.5" stroke="white" />
+            <line y1="10.5" x2="40" y2="10.5" stroke="white" />
+          </svg>
+        </button>
+        <button class="button hamburger" type="button">
+          <span class="visually-hidden">Меню</span>
+          <span class="hamburger__item"></span>
+          <span class="hamburger__item"></span>
+          <span class="hamburger__item"></span>
+        </button>
+      </div>
+    </header>
+  </section>
 
   <main>
 
