--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -59,8 +59,8 @@
             <li class="main-menu__item"><a class="main-menu__link" href="#">Косметика</a></li>
           </ul>
         </nav>
-        <a class="logo header__logo" href="#">
-          <img class="header__logo-img" src="images/logo.svg" alt="Логотип Delote-Beauty">
+        <a class="header__logo" href="#">
+          <img class="logo header__logo-img" src="images/logo.svg" alt="Логотип Delote-Beauty">
         </a>
         <nav class="main-menu">
           <ul class="main-menu__list">
@@ -91,8 +91,49 @@
 
   </main>
 
-  <footer>
-
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrapper">
+        <a class="footer__logo" href="#">
+          <img class="logo logo--footer" src="images/logo.svg" alt="Логотип Delote-Beauty">
+        </a>
+        <div class="contacts footer__contacts">
+          <h3 class="title title--small">Контакты</h3>
+          <div class="contacts__wrapper">
+            <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (812) 123-45-67</a>
+            <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (911) 123-45-67</a>
+            <span class="contacts__item contacts__adress text">Новоостровский проспект, дом 36 лит. С</span>
+          </div>
+        </div>
+        <div class="working-mode footer__working-mode">
+          <h3 class="title title--small">Режим работы</h3>
+          <div class="working-mode__wrapper">
+            <span class="working-mode__item text">C 10:00 до 21:00 (Пн-Пт)</span>
+            <span class="working-mode__item text">С 11:00 до 20:00 (Сб-Вс)</span>
+          </div>
+        </div>
+        <div class="footer__social">
+          <h3 class="title title--small">Мы в Instagram</h3>
+          <a class="button" href="#">
+            <span class="visually-hidden">Инстаграм</span>
+            <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M18.5341 1H7.46592C3.89455 1 1 3.89507 1 7.46592V18.5341C1 22.1054 3.89507 25 7.46643 25H18.5336C22.1049 25 25 22.1049 25 18.5336V7.46592C25 3.89455 22.1049 1 18.5336 1H18.5341Z"
+                stroke="white" stroke-width="2" stroke-miterlimit="10" />
+              <path
+                d="M13 18.7932C16.1995 18.7932 18.7932 16.1995 18.7932 13C18.7932 9.8005 16.1995 7.20679 13 7.20679C9.80049 7.20679 7.20679 9.8005 7.20679 13C7.20679 16.1995 9.80049 18.7932 13 18.7932Z"
+                stroke="white" stroke-width="2" stroke-miterlimit="10" />
+              <path
+                d="M20.0345 7.20688C20.72 7.20688 21.2757 6.65115 21.2757 5.96562C21.2757 5.2801 20.72 4.72437 20.0345 4.72437C19.3489 4.72437 18.7932 5.2801 18.7932 5.96562C18.7932 6.65115 19.3489 7.20688 20.0345 7.20688Z"
+                fill="white" />
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="copyright">
+        <p class="copyright__text text">Copyright © 2017 - 2022</p>
+      </div>
+    </div>
   </footer>
 
   <script src="js/main.min.js"></script>
