--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -85,6 +85,7 @@
         </button>
       </div>
     </header>
+    <h1 class="title promo__title">Салон красоты «Delote-Beauty» на Крестовском</h1>
   </section>
 
   <main>
