--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -89,7 +89,19 @@
   </section>
 
   <main>
-
+    <section class="description">
+      <div class="container">
+        <h2 class="visually-hidden">О нашем салоне</h2>
+        <p class="description__text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo placeat reiciendis, omnis enim commodi
+          distinctio ad magni dolor voluptatibus cum, laudantium dicta, hic est totam fuga fugit quidem ea. Animi.
+        </p>
+        <p class="description__text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo placeat reiciendis, omnis enim commodi
+          distinctio ad magni dolor voluptatibus cum, laudantium dicta, hic est totam fuga fugit quidem ea. Animi.
+        </p>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
