--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,76 @@
         </p>
       </div>
     </section>
+
+    <section class="services">
+      <h2 class="visually-hidden">Наши услуги</h2>
+      <div class="container">
+        <ul class="services__list">
+          <li class="services__item">
+            <div class="service">
+              <a href="price.html" class="service__link">
+                <div class="service__img-wrapper">
+                  <img class="service__img" src="images/services/hairdresser-1-min.jpg" alt="Фото стрижки волос">
+                </div>
+                <h3 class="service__description">Парикмахерские услуги</h3>
+              </a>
+            </div>
+          </li>
+          <li class="services__item">
+            <div class="service">
+              <a href="price.html" class="service__link">
+                <div class="service__img-wrapper">
+                  <img class="service__img" src="images/services/manicure-1-min.jpg" alt="Фото процесса маникюра">
+                </div>
+                <h3 class="service__description">Маникюр</h3>
+              </a>
+            </div>
+          </li>
+          <li class="services__item">
+            <div class="service">
+              <a href="price.html" class="service__link">
+                <div class="service__img-wrapper">
+                  <img class="service__img" src="images/services/pedicure-1-min.jpg" alt="Фото педикюра">
+                </div>
+                <h3 class="service__description">Педикюр</h3>
+              </a>
+            </div>
+          </li>
+          <li class="services__item">
+            <div class="service">
+              <a href="price.html" class="service__link">
+                <div class="service__img-wrapper">
+                  <img class="service__img" src="images/services/cosmetology-1-min.jpg"
+                    alt="Фото процесса нанесения косметической маски на лицо">
+                </div>
+                <h3 class="service__description">Косметология</h3>
+              </a>
+            </div>
+          </li>
+          <li class="services__item">
+            <div class="service">
+              <a href="price.html" class="service__link">
+                <div class="service__img-wrapper">
+                  <img class="service__img" src="images/services/esthtetician-1-min.jpg" alt="Фото мыла и полотенца">
+                </div>
+                <h3 class="service__description">Эстетист по телу</h3>
+              </a>
+            </div>
+          </li>
+          <li class="services__item">
+            <div class="service">
+              <a href="price.html" class="service__link">
+                <div class="service__img-wrapper">
+                  <img class="service__img" src="images/services/makeup-1-min.jpg" alt="Фото декоративной косметики">
+
+                </div>
+                <h3 class="service__description">Визаж</h3>
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
