--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,79 @@
       </div>
     </section>
 
+    <section class="works">
+      <div class="container">
+        <h2 class="title title--medium">Наши работы</h2>
+        <ul class="works__menu-list">
+          <li class="works__tab works__tab--active">Показать все</li>
+          <li class="works__tab">Парикмахерские услуги</li>
+          <li class="works__tab">Маникюр</li>
+          <li class="works__tab">Педикюр</li>
+        </ul>
+        <ul class="works__list works__list--active">
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-1-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-2-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-3-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-4-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-5-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-6-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-7-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-8-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-9-min.jpg" alt="Фото работы">
+          </li>
+        </ul>
+        <ul class="works__list">
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-5-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-8-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-9-min.jpg" alt="Фото работы">
+          </li>
+        </ul>
+        <ul class="works__list">
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-3-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-7-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-2-min.jpg" alt="Фото работы">
+          </li>
+        </ul>
+        <ul class="works__list">
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-1-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-4-min.jpg" alt="Фото работы">
+          </li>
+          <li class="works__item">
+            <img class="works__img" src="images/works/work-6-min.jpg" alt="Фото работы">
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
