add page BEAUTY-MASTERS

--- a/app/pages/contacts.html
+++ b/app/pages/contacts.html
@@ -65,8 +65,7 @@
         <ul class="main-menu__list">
           <li class="main-menu__item"><a class="main-menu__link" href="price.html">Акции</a></li>
           <li class="main-menu__item"><a class="main-menu__link" href="#">Отзывы</a></li>
-          <li class="main-menu__item"><a class="main-menu__link main-menu__link--current"
-              href="contacts.html">Контакты</a></li>
+          <li class="main-menu__item"><a class="main-menu__link main-menu__link--current">Контакты</a></li>
         </ul>
       </nav>
       <button class="button info-button" type="button">
