--- a/app/beauty-masters.html
+++ b/app/beauty-masters.html
@@ -54,7 +54,7 @@
         <ul class="main-menu__list">
           <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a>
           </li>
-          <li class="main-menu__item"><a class="main-menu__link" href="beauty-masters.html">Мастера</a></li>
+          <li class="main-menu__item"><a class="main-menu__link main-menu__link--current">Мастера</a></li>
           <li class="main-menu__item"><a class="main-menu__link" href="#">Косметика</a></li>
         </ul>
       </nav>
@@ -65,7 +65,7 @@
         <ul class="main-menu__list">
           <li class="main-menu__item"><a class="main-menu__link" href="price.html">Акции</a></li>
           <li class="main-menu__item"><a class="main-menu__link" href="#">Отзывы</a></li>
-          <li class="main-menu__item"><a class="main-menu__link main-menu__link--current">Контакты</a></li>
+          <li class="main-menu__item"><a class="main-menu__link" href="contacts.html">Контакты</a></li>
         </ul>
       </nav>
       <button class="button info-button" type="button">
@@ -86,51 +86,57 @@
   </header>
 
   <main>
-    <h1 class="title title--medium">Контакты</h1>
+    <h1 class="title title--medium">Наши мастера</h1>
 
-    <section class="map">
-      <h2 class="visually-hidden">Карта</h2>
+    <section class="masters">
+      <h2 class="visually-hidden">Список мастеров салона</h2>
       <div class="container">
-        <img class="map__img" src="images/map.jpg" alt="Карта">
+        <ul class="masters__list">
+          <li class="master masters__item">
+            <div class="master__photo-wrapper">
+              <img class="master__photo" src="images/masters/master-1-min.jpg" alt="Фотография мастера">
+            </div>
+            <h3 class="master__name title title--xs">Елена Васильевна</h3>
+            <h4 class="master__specialization title title--subtitle">Визажист</h4>
+          </li>
+          <li class="master masters__item">
+            <div class="master__photo-wrapper">
+              <img class="master__photo" src="images/masters/master-2-min.jpg" alt="Фотография мастера">
+            </div>
+            <h3 class="master__name title title--xs">Елена Васильевна</h3>
+            <h4 class="master__specialization title title--subtitle">Визажист</h4>
+          </li>
+          <li class="master masters__item">
+            <div class="master__photo-wrapper">
+              <img class="master__photo" src="images/masters/master-1-min.jpg" alt="Фотография мастера">
+            </div>
+            <h3 class="master__name title title--xs">Елена Васильевна</h3>
+            <h4 class="master__specialization title title--subtitle">Визажист</h4>
+          </li>
+          <li class="master masters__item">
+            <div class="master__photo-wrapper">
+              <img class="master__photo" src="images/masters/master-4-min.jpg" alt="Фотография мастера">
+            </div>
+            <h3 class="master__name title title--xs">Елена Васильевна</h3>
+            <h4 class="master__specialization title title--subtitle">Визажист</h4>
+          </li>
+          <li class="master masters__item">
+            <div class="master__photo-wrapper">
+              <img class="master__photo" src="images/masters/master-5-min.jpg" alt="Фотография мастера">
+            </div>
+            <h3 class="master__name title title--xs">Елена Васильевна</h3>
+            <h4 class="master__specialization title title--subtitle">Визажист</h4>
+          </li>
+          <li class="master masters__item">
+            <div class="master__photo-wrapper">
+              <img class="master__photo" src="images/masters/master-6-min.jpg" alt="Фотография мастера">
+            </div>
+            <h3 class="master__name title title--xs">Елена Васильевна</h3>
+            <h4 class="master__specialization title title--subtitle">Визажист</h4>
+          </li>
+        </ul>
       </div>
     </section>
-
-    <section class="map-description">
-      <h2 class="visually-hidden">Наши контакты</h2>
-      <div class="map-description__wrapper container">
-        <div class="contacts map-description__contacts">
-          <h3 class="title title--small">Контакты</h3>
-          <div class="contacts__wrapper">
-            <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (812) 123-45-67</a>
-            <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (911) 123-45-67</a>
-            <span class="contacts__item contacts__adress text">Новоостровский проспект, дом 36 лит. С</span>
-          </div>
-        </div>
-        <div class="working-mode map-description__working-mode">
-          <h3 class="title title--small">Режим работы</h3>
-          <div class="working-mode__wrapper">
-            <span class="working-mode__item text">C 10:00 до 21:00 (Пн-Пт)</span>
-            <span class="working-mode__item text">С 11:00 до 20:00 (Сб-Вс)</span>
-          </div>
-        </div>
-        <div class="contacts map-description__contacts">
-          <h3 class="title title--small">Контакты</h3>
-          <div class="contacts__wrapper">
-            <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (812) 123-45-67</a>
-            <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (911) 123-45-67</a>
-            <span class="contacts__item contacts__adress text">Новоостровский проспект, дом 36 лит. С</span>
-          </div>
-        </div>
-        <div class="working-mode map-description__working-mode">
-          <h3 class="title title--small">Режим работы</h3>
-          <div class="working-mode__wrapper">
-            <span class="working-mode__item text">C 10:00 до 21:00 (Пн-Пт)</span>
-            <span class="working-mode__item text">С 11:00 до 20:00 (Сб-Вс)</span>
-          </div>
-        </div>
-      </div>
-    </section>
-
   </main>
 
   <footer class="footer">
