--- a/app/page copy.html
+++ b/app/page copy.html
@@ -52,7 +52,7 @@
         </a>
         <nav class="main-menu">
           <ul class="main-menu__list">
-            <li class="main-menu__item"><a class="main-menu__link"  href="index.html">Главная</a>
+            <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a>
             </li>
             <li class="main-menu__item"><a class="main-menu__link" href="beauty-masters.html">Мастера</a></li>
             <li class="main-menu__item"><a class="main-menu__link" href="#">Косметика</a></li>
@@ -63,7 +63,7 @@
         </a>
         <nav class="main-menu">
           <ul class="main-menu__list">
-            <li class="main-menu__item"><a class="main-menu__link" href="price.html">Акции</a></li>
+            <li class="main-menu__item"><a class="main-menu__link main-menu__link--current">Акции</a></li>
             <li class="main-menu__item"><a class="main-menu__link" href="#">Отзывы</a></li>
             <li class="main-menu__item"><a class="main-menu__link" href="contacts.html">Контакты</a></li>
           </ul>
