--- a/app/pages/beauty-masters.html
+++ b/app/pages/beauty-masters.html
@@ -184,6 +184,35 @@
     </div>
   </footer>
 
+  <section class="info info--close">
+    <h2 class="visually-hidden">Контакты и режим работы</h2>
+    <div class="info__container">
+      <p class="info__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat mollitia eos animi modi exercitationem? Nulla
+        tempora reprehenderit porro quas consectetur. Sed repellat esse neque saepe, sunt dolore atque veniam
+        consequuntur!
+      </p>
+      <div class="contacts info__contacts">
+        <h3 class="title title--small">Контакты</h3>
+        <div class="contacts__wrapper">
+          <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (812) 123-45-67</a>
+          <a class="contacts__item contacts__link" href="tel:+78121234567">+7 (911) 123-45-67</a>
+          <span class="contacts__item contacts__adress text">Новоостровский проспект, дом 36 лит. С</span>
+        </div>
+      </div>
+      <div class="working-mode info__working-mode">
+        <h3 class="title title--small">Режим работы</h3>
+        <div class="working-mode__wrapper">
+          <span class="working-mode__item text">C 10:00 до 21:00 (Пн-Пт)</span>
+          <span class="working-mode__item text">С 11:00 до 20:00 (Сб-Вс)</span>
+        </div>
+      </div>
+      <button class="button button--info-close" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
+    </div>
+  </section>
+
   <script src="js/main.min.js"></script>
 </body>
 
